.navigation -added width 100% -postion fixed
.nav-logo-img
-added height
-adding padding-left

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <div class="navigation">
             <div class="nav-logo">
-                <img src="/Images/img-tea-cozy-logo.png" alt="Logo for Tea Cozy">
+                <img class="nav-logo-img" src="/Images/img-tea-cozy-logo.png" alt="Logo for Tea Cozy">
             </div>
             <ul class="nav-list">
                 <li><a href="#">Mission</a></li>
