html -added main section -added div -added img
css
.navigation
-added border bottom
-overflow
-margin and padding

a
- added color
-added underline

.banner-img
-padding top
-height
-position

--- a/index.html
+++ b/index.html
@@ -20,5 +20,11 @@
             </ul>
         </div>
     </nav>
+
+    <main>
+        <div class="banner-img"> 
+            <img src="./Images/img-mission-background.jpg" alt="">
+        </div>
+    </main>
 </body>
 </html>
