text middle of the image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
     <main>
         <div class="banner-img"> 
             <img src="./Images/img-mission-background.jpg" alt="">
+            <div class="center-text">
+                <h2>Our Mission</h2>
+                <h4>Handpicked, Artisannally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+            </div>
         </div>
+
     </main>
 </body>
 </html>
