html -added new section -added h1 and p -added images and descriptions -created div container -added image card containers

--- a/index.html
+++ b/index.html
@@ -29,7 +29,34 @@
                 <h4>Handpicked, Artisannally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
             </div>
         </div>
-
     </main>
+
+    <section>
+        <h2>Tea of the Month</h2>
+        <p>What's Steeping at The Tea Cozy?</p>
+
+        <div class="img-container">
+            <div class="img-cards">
+                <img src="./Images/img-berryblitz.jpg" alt="Fall Berry Blitz Tea">
+                <p>Fall Berry Blitz Tea</p>
+            </div>
+            <div class="img-cards">
+                <img src="./Images/img-spiced-rum.jpg" alt="Spiced Rum Tea">
+                <p>Spiced Rum Tea</p>
+            </div>
+            <div class="img-cards">
+                <img src="./Images/img-donut.jpg" alt="Donut sprinkled with caster sugar on a plate">
+                <p>Sasonal Donuts</p>
+            </div>
+            <div class="img-cards">
+                <img src="./Images/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
+                <p>Myrtle Ave Tea</p>
+            </div>
+            <div class="img-cards">
+                <img src="./Images/img-bedford-bizarre.jpg" alt="Cup of Bedford Bizarre Tea">
+                <p>Bedford Bizarre Tea</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
