html -added new section -h1 -container div -card-containers -h3s and p tags inside card container -added footer -added h2 -added h5 tags

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </main>
 
-    <section>
+    <section class="TOTM">
         <h2>Tea of the Month</h2>
         <p>What's Steeping at The Tea Cozy?</p>
 
@@ -58,5 +58,29 @@
             </div>
         </div>
     </section>
+
+    <section class="locations">
+        <h1 class="locations-h1">Locations</h1>
+        <div class="card-container">
+            <div class="adress-cards">
+                <h3>Downtown</h3>
+                <p></p>
+            </div>
+            <div class="adress-cards">
+                <h3>East Bayside</h3>
+                <p></p>
+            </div>
+            <div class="adress-cards">
+                <h3>Oakdale</h3>
+                <p></p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8904</h5>
+        <h5>Copyright The Tea Cozy 2017</h5>
+    </footer>
 </body>
 </html>
