removed reset css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="reset.css">
     <title>Tea Cozy</title>
 </head>
 <body>
@@ -22,8 +21,8 @@
     </nav>
 
     <main>
-        <div class="banner-img"> 
-            <img src="./Images/img-mission-background.jpg" alt="">
+        <div class="banner-img" style="text-align: center;"> 
+            <img src="./Images/img-mission-background.jpg" alt="" height="700px" width="1200px">
             <div class="center-text">
                 <h2>Our Mission</h2>
                 <h4>Handpicked, Artisannally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
