--- a/index.html
+++ b/index.html
@@ -1,85 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Tea Cozy</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav>
-        <div class="navigation">
-            <div class="nav-logo">
-                <img class="nav-logo-img" src="/Images/img-tea-cozy-logo.png" alt="Logo for Tea Cozy">
-            </div>
-            <ul class="nav-list">
-                <li><a href="#">Mission</a></li>
-                <li><a href="#">Featured Tea</a></li>
-                <li><a href="#">Locations</a></li>
-            </ul>
+      <div class="navigation">
+        <div class="nav-logo">
+          <img
+            class="nav-logo-img"
+            src="/Images/img-tea-cozy-logo.png"
+            alt="Logo for Tea Cozy"
+          />
         </div>
+        <ul class="nav-list">
+          <li><a href="#">Mission</a></li>
+          <li><a href="#">Featured Tea</a></li>
+          <li><a href="#">Locations</a></li>
+        </ul>
+      </div>
     </nav>
 
     <main>
-        <div class="banner-img" style="text-align: center;"> 
-            <img src="./Images/img-mission-background.jpg" alt="" height="700px" width="1200px">
-            <div class="center-text">
-                <h2>Our Mission</h2>
-                <h4>Handpicked, Artisannally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-            </div>
+      <div class="banner-img">
+        <img src="./Images/img-mission-background.jpg" alt="" />
+        <div class="center-text">
+          <h2>Our Mission</h2>
+          <h4>
+            Handpicked, Artisannally Curated, Free Range, Sustainable, Small
+            Batch, Fair Trade, Organic Tea
+          </h4>
         </div>
+      </div>
     </main>
 
     <section class="TOTM">
-        <h2>Tea of the Month</h2>
-        <p>What's Steeping at The Tea Cozy?</p>
+      <h2>Tea of the Month</h2>
+      <p>What's Steeping at The Tea Cozy?</p>
 
-        <div class="img-container">
-            <div class="img-cards">
-                <img src="./Images/img-berryblitz.jpg" alt="Fall Berry Blitz Tea">
-                <p>Fall Berry Blitz Tea</p>
-            </div>
-            <div class="img-cards">
-                <img src="./Images/img-spiced-rum.jpg" alt="Spiced Rum Tea">
-                <p>Spiced Rum Tea</p>
-            </div>
-            <div class="img-cards">
-                <img src="./Images/img-donut.jpg" alt="Donut sprinkled with caster sugar on a plate">
-                <p>Sasonal Donuts</p>
-            </div>
-            <div class="img-cards">
-                <img src="./Images/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
-                <p>Myrtle Ave Tea</p>
-            </div>
-            <div class="img-cards">
-                <img src="./Images/img-bedford-bizarre.jpg" alt="Cup of Bedford Bizarre Tea">
-                <p>Bedford Bizarre Tea</p>
-            </div>
+      <div class="img-container">
+        <div class="img-cards">
+          <img src="./Images/img-berryblitz.jpg" alt="Fall Berry Blitz Tea" />
+          <p>Fall Berry Blitz Tea</p>
         </div>
+        <div class="img-cards">
+          <img src="./Images/img-spiced-rum.jpg" alt="Spiced Rum Tea" />
+          <p>Spiced Rum Tea</p>
+        </div>
+        <div class="img-cards">
+          <img
+            src="./Images/img-donut.jpg"
+            alt="Donut sprinkled with caster sugar on a plate"
+          />
+          <p>Sasonal Donuts</p>
+        </div>
+        <div class="img-cards">
+          <img src="./Images/img-myrtle-ave.jpg" alt="Myrtle Ave Tea" />
+          <p>Myrtle Ave Tea</p>
+        </div>
+        <div class="img-cards">
+          <img
+            src="./Images/img-bedford-bizarre.jpg"
+            alt="Cup of Bedford Bizarre Tea"
+          />
+          <p>Bedford Bizarre Tea</p>
+        </div>
+      </div>
     </section>
 
     <section class="locations">
-        <h1 class="locations-h1">Locations</h1>
-        <div class="card-container">
-            <div class="adress-cards">
-                <h3>Downtown</h3>
-                <p></p>
-            </div>
-            <div class="adress-cards">
-                <h3>East Bayside</h3>
-                <p></p>
-            </div>
-            <div class="adress-cards">
-                <h3>Oakdale</h3>
-                <p></p>
-            </div>
+      <h1 class="locations-h1">Locations</h1>
+      <div class="card-container">
+        <div class="adress-cards">
+          <h3>Downtown</h3>
+          <p></p>
         </div>
+        <div class="adress-cards">
+          <h3>East Bayside</h3>
+          <p></p>
+        </div>
+        <div class="adress-cards">
+          <h3>Oakdale</h3>
+          <p></p>
+        </div>
+      </div>
     </section>
     <footer>
-        <h2>The Tea Cozy</h2>
-        <h5>contact@theteacozy.com</h5>
-        <h5>917-555-8904</h5>
-        <h5>Copyright The Tea Cozy 2017</h5>
+      <h2>The Tea Cozy</h2>
+      <h5>contact@theteacozy.com</h5>
+      <h5>917-555-8904</h5>
+      <h5>Copyright The Tea Cozy 2017</h5>
     </footer>
-</body>
+  </body>
 </html>
