added header -.flex-container
added nav and span + a tags

--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>The Tea Cozy</title>
 </head>
 <body>
     
+    <!-- Header -->
+    <header class="flex-container">
+        <img src="./Images/img-tea-cozy-logo.png" alt="The Tea Cozy logo" >
+        <nav>
+            <span><a href="#mission">Mission</a></span>
+            <span><a href="#featured tea">Featured Tea</a></span>
+            <span><a href="#locations">Locations</a></span>
+        </nav>
+    </header>
+
+    <!-- Main Content -->
+
+
 </body>
 </html>
