added mission section and main content section

--- a/index.html
+++ b/index.html
@@ -18,8 +18,17 @@
         </nav>
     </header>
 
-    <!-- Main Content -->
+    <!-- Main Content container -->
+    <div class="main">
 
+    <!-- Mission section -->
+    <div id="misson" class="flex-container">
+        <div class="content">
+            <h2>Mission</h2>
+            <h4>Handpicked, Artisannally Curated, Free Range, Sustainable, Small
+            Batch, Fair Trade, Organic Tea</h4>
+        </div>
+    </div>
 
 </body>
 </html>
