added new things too

--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
     </header>
 
     <!-- Main Content container -->
-    <div class="main">
+    <div class="main"></div>
 
     <!-- Mission section -->
-    <div id="misson" class="flex-container">
-        <div class="content">
-            <h2>Mission</h2>
-            <h4>Handpicked, Artisannally Curated, Free Range, Sustainable, Small
-            Batch, Fair Trade, Organic Tea</h4>
+        <div id="misson" class="flex-container">
+            <div class="content">
+                <h2>Mission</h2>
+                <h4>Handpicked, Artisannally Curated, Free Range, Sustainable, Small
+                Batch, Fair Trade, Organic Tea</h4>
+            </div>
         </div>
-    </div>
+
 
 </body>
 </html>
