--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
 
     <!-- Main Content container -->
-    <div class="main"></div>
+    <div class="Main">
 
     <!-- Mission section -->
         <div id="misson" class="flex-container">
