corrected flex container items, added divs with proper class .item

--- a/index.html
+++ b/index.html
@@ -34,25 +34,26 @@
             <h2></h2>
             <h4></h4>
             <div class="flex-container items">
-                <img src="./Images/img-berryblitz.jpg" alt="berry blitz tea">
-                <span>Fall Berry Blitz Tea</span>
-            </div>
-            <div class="flex-container items">
-                <img src="./Images/img-spiced-rum.jpg" alt="Spiced Rum tea">
-                <span>Spiced Rum Tea</span>
-            </div>
-            <div class="flex-container items">
-                <img src="./Images/img-donut.jpg" alt="Donut on a plate covered in powdered sugar">
-                <span>Seasonal Donuts</span>
-            </div>
-            <div class="flex-container items">
-                <img src="./Images/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
-                <span>Myrtle Ave Tea</span>
-            </div>
-            <div class="flex-container items">
-                <img src="./Images/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea">
-                <span>Bedford Bizarre Tea</span>
-            </div>
+               <div class="item"> 
+                    <img src="./Images/img-berryblitz.jpg" alt="berry blitz tea">
+                    <span>Fall Berry Blitz Tea</span>
+               </div>
+                <div class="item">
+                    <img src="./Images/img-spiced-rum.jpg" alt="Spiced Rum tea">
+                    <span>Spiced Rum Tea</span>
+                </div>
+                <div class="item">
+                    <img src="./Images/img-donut.jpg" alt="Donut on a plate covered in powdered sugar">
+                    <span>Seasonal Donuts</span>
+                </div>
+                <div class="item">
+                    <img src="./Images/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
+                    <span>Myrtle Ave Tea</span>
+                </div>
+                <div class="item">
+                    <img src="./Images/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea">
+                    <span>Bedford Bizarre Tea</span>
+                </div>
         </div>
 
     </div>    
