did the location section

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </div>
 
         <div id="store">
-            <h2></h2>
-            <h4></h4>
+            <h2>Tea of the month</h2>
+            <h4>What's steeping at The Yea Cozy?</h4>
             <div class="flex-container items">
                <div class="item"> 
                     <img src="./Images/img-berryblitz.jpg" alt="berry blitz tea">
@@ -54,6 +54,32 @@
                     <img src="./Images/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea">
                     <span>Bedford Bizarre Tea</span>
                 </div>
+        </div>
+
+        <!-- Locations -->
+
+        <div id="locations">
+            <h2></h2>
+            <div class="flex-container locations">
+                <div class="locations">
+                    <h3>Downtown</h3>
+                    <p>384 West 4th St</p>
+                    <p>Suite 108</p>
+                    <p>Portland, Maine</p>
+                </div>
+                <div class="locations">
+                    <h3>East Bayside</h3>
+                    <p>3433 Phisherman's Avenue</p>
+                    <p>(Northwest Corner)</p>
+                    <p>Portland,Maine</p>
+                </div>
+                <div class="locations">
+                    <h3>Oakdale</h3>
+                    <p>515 Cresecent Avenue</p>
+                    <p>Second Floor</p>
+                    <p>Portland,Maine</p>
+                </div>
+            </div>
         </div>
 
     </div>    
