added contact section

--- a/index.html
+++ b/index.html
@@ -81,7 +81,16 @@
                 </div>
             </div>
         </div>
-
     </div>    
+
+    <!-- Contact section -->
+
+    <div id="contact">
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-000-000</h5>
+    </div>
+
+    <!-- Footer section -->
 </body>
 </html>
