--- a/index.html
+++ b/index.html
@@ -88,9 +88,13 @@
     <div id="contact">
         <h2>The Tea Cozy</h2>
         <h5>contact@theteacozy.com</h5>
-        <h5>917-000-000</h5>
+        <h5>917-555-8904</h5>
     </div>
 
     <!-- Footer section -->
+    <footer>
+        <h5>Copyright of The Tea Cozy 2017</h5>
+    </footer>
+
 </body>
 </html>
