--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
     <div class="Main">
 
     <!-- Mission section -->
-        <div id="misson" class="flex-container">
+        <div id="mission" class="flex-container">
             <div class="content">
                 <h2>Our Mission</h2>
-                <h4>Handpicked, Artisannally Curated, Free Range, Sustainable, Small
-                Batch, Fair Trade, Organic Tea</h4>
-            </div>
+                <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+            </div>    
         </div>
+
+        <!-- Store section -->
 
         <div id="store">
             <h2>Tea of the month</h2>
@@ -61,19 +62,19 @@
         <div id="locations">
             <h2></h2>
             <div class="flex-container locations">
-                <div class="locations">
+                <div class="location">
                     <h3>Downtown</h3>
                     <p>384 West 4th St</p>
                     <p>Suite 108</p>
                     <p>Portland, Maine</p>
                 </div>
-                <div class="locations">
+                <div class="location">
                     <h3>East Bayside</h3>
                     <p>3433 Phisherman's Avenue</p>
                     <p>(Northwest Corner)</p>
                     <p>Portland,Maine</p>
                 </div>
-                <div class="locations">
+                <div class="location">
                     <h3>Oakdale</h3>
                     <p>515 Cresecent Avenue</p>
                     <p>Second Floor</p>
@@ -81,8 +82,8 @@
                 </div>
             </div>
         </div>
-    </div>    
 
+        
     <!-- Contact section -->
 
     <div id="contact">
@@ -91,10 +92,11 @@
         <h5>917-555-8904</h5>
     </div>
 
-    <!-- Footer section -->
-    <footer>
-        <h5>Copyright of The Tea Cozy 2017</h5>
-    </footer>
+        <!-- Footer section -->
+        <footer>
+            <h5>Copyright of The Tea Cozy 2017</h5>
+        </footer>
 
+    </div>    
 </body>
 </html>
